--- a/privacy.html
+++ b/privacy.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="Ek5_tTf2dKJUed4P6aOff2VTnHpYTPi35gnf1SXCWzw" />
   <title>Privacy Policy - Drive Exchange Server</title>
   <style>
     body { font-family: Arial, sans-serif; max-width: 800px; margin: 40px auto; line-height: 1.6; color: #222; }
@@ -31,3 +31,4 @@
   <p>For questions or issues, contact: <a href="mailto:subfusion15@gmail.com">subfusion15@gmail.com</a></p>
 </body>
 </html>
+
